chore: add some text to proposal

--- a/documentation/proposal/proposal.tex
+++ b/documentation/proposal/proposal.tex
@@ -5,6 +5,17 @@
 
 \begin{document}
 
+\begin{center}
+{\Large CS221 Fall 2018 Project} \\
+{\Large Lunar Landing}
+
+\begin{tabular}{rl}
+SUNet ID: & [your SUNet ID] \\
+Name: & [your first and last name] \\
+Collaborators: & [list all the people you worked with]
+\end{tabular}
+\end{center}
+
 
 \bibliography{biblio}
 \bibliographystyle{abbrv}
