feat: add SU net ids, fix typo in Prabhjot

--- a/documentation/proposal/proposal.tex
+++ b/documentation/proposal/proposal.tex
@@ -10,7 +10,8 @@
 {\Large An AI agent for Lunar Lander}
 
 \begin{tabular}{rl}
-Collaborators: & Amey Naik, Prabhjyot Singh Rai, Abhishek Bharani
+Collaborators: & Amey Naik, Prabhjot Singh Rai, Abhishek Bharani \\
+SU Net IDs: & ameynaik, prabhjot, abharani
 \end{tabular}
 \end{center}
 
