--- a/documentation/proposal/proposal.tex
+++ b/documentation/proposal/proposal.tex
@@ -18,23 +18,19 @@ SU Net IDs: & ameynaik, prabhjot, abharani
 
 \section{Introduction}
 
-The purpose of this project is to build an AI agent to play Lunar Lander game to safely land on a landing pad. We will utilize different variants of DQN such as Double DQN\citep{DoubleQ-learning}, DQN with prioritize replay\citep{PrioritizedReplay} , Dueling network architecture \citep{Dueling}, continuous action space \citep{Continuous} to solve this problem.Our goal is to obtain a policy that once followed by the agent, makes it capable of obtaining scores comparable to human playing  the game  (Oracle).
-
-\section{Problem Statement}
-Landing pad is always at coordinates (0,0). Coordinates are the first two numbers in state vector. Reward for moving from the top of the screen to landing pad and zero speed is about 100..140 points. If lander moves away from landing pad it loses reward back. Episode finishes if the lander crashes or comes to rest, receiving additional -100 or +100 points. Each leg ground contact is +10. Firing main engine is -0.3 points each frame. Solved is 200 points. Landing outside landing pad is possible. Fuel is infinite, so an agent can learn to fly and then land on its first attempt. Four discrete actions available: do nothing, fire left orientation engine, fire main engine, fire right orientation engine. The AI agent gets 8 inputs. The eight inputs are mapped to the horizontal position (x-axis), vertical position (y-axis), orientation (theta), linear velocity (v), angular velocity (w), state of each landing leg (left and right), and a “crash” state.
+The purpose of this project is to build an AI agent to play Lunar Lander game to safely land on a landing pad. We are making use of Box2D Lunar Lander available on OpenAI gym. Landing pad is always at coordinates (0,0). Reward for reaching the landing pad is about 100 to 140 points, depending on the speed. If lander moves away from landing pad it loses reward back. Episode finishes if the lander crashes or comes to rest, receiving additional -100 or +100 points. Each leg ground contact is +10. Firing main engine is -0.3 points each frame. Solved is 200 points. Landing outside landing pad is possible. Fuel is infinite. Four discrete actions available: do nothing, fire left orientation engine, fire main engine, fire right orientation engine. Our state at any given frame is defined by 8 parameters: horizontal position (x-axis), vertical position (y-axis), orientation (theta), linear velocity (v), angular velocity (w), state of each landing leg (left and right). Moreover, our environment, which is the surface of the moon, keeps changing with each episode.
 \begin{center}
-\includegraphics[scale=0.5]{LunarLanderDemoImage.png}
+\includegraphics[scale=0.3]{LunarLanderDemoImage.png}
 \end{center}
 
+
 \section{Baseline}
-We define multiple baselines for this problem in the increasing order of their performance:
+We define multiple baselines:
 \begin{enumerate}[label=(\alph*)]
-\item Taking random actions multiple times till the lunar-lander lands. From the histogram shown below we can see that it never works.
+\item Random Action Baseline: Taking random action at any given state out of the available actions. We see that in almost all the cases, we get negative rewards. In order to check if taking a single action may lead to the optimum, we saw that this policy performed even worse than taking random actions.
 \newline
-\includegraphics[scale=0.3]{images/idle_action.png} \includegraphics[scale=0.3]{images/thrust_action.png}
-\includegraphics[scale=0.3]{images/rotate_anticlockwise_action.png} 
 \begin{center}
-\includegraphics[scale=0.3]{images/rotate_clockwise_action.png}\includegraphics[scale=0.3]{images/random-action-reward-plot.png}
+\includegraphics[scale=0.3]{images/random-action-reward-plot.png}
 \end{center}
 \item Start with randomly picking an action for a new state that is explored, if the state gets explored in the episode ‘e1’, then in the next episode ‘e2’ if you encounter that state, pick the previously stored action for that state. Our baseline will be a greedy algorithm which will act to  fetch maximum rewards but does not account for future states and early convergence.
 \end{enumerate}
@@ -43,8 +39,8 @@ We define multiple baselines for this problem in the increasing order of their p
 \section{Oracle}
 We define multiple oracles for this problem in the increasing order of their performance and complexity:
 \begin{enumerate}[label=(\alph*)]
-\item Comparable human playing score.
-\item For scoring - an oracle score is the maximum score one can achieve which is 140 [reach landing pad]  + 100 [stopping without crashing] + 10*(num legs) [each leg ground contact].
+\item Human playing score.
+\item Maximum score that one can achieve which is 140 [reach landing pad]  + 100 [stopping without crashing] + 10*(num legs) [each leg ground contact]
 \item For an agent - if the time-taken to learn and get an average score of 200, the oracle can be the score from the leaderboard available online for this game. [insert link]
 \end{enumerate}
 
