--- a/documentation/proposal/biblio.bib
+++ b/documentation/proposal/biblio.bib
@@ -1,3 +1,7 @@
+@article{leaderboard,
+author={https://github.com/openai/gym/wiki/Leaderboard}
+}
+
 @article{PrioritizedReplay,
   author    = {Tom Schaul and
                John Quan and
