chore: add open ai bib

--- a/documentation/proposal/biblio.bib
+++ b/documentation/proposal/biblio.bib
@@ -1,5 +1,9 @@
+@article{openai,
+title={https://gym.openai.com/envs/LunarLander-v2/}
+}
+
 @article{leaderboard,
-author={https://github.com/openai/gym/wiki/Leaderboard}
+title={https://github.com/openai/gym/wiki/Leaderboard\#lunarlander-v2}
 }
 
 @article{PrioritizedReplay,
