--- a/documentation/proposal/proposal.tex
+++ b/documentation/proposal/proposal.tex
@@ -33,7 +33,7 @@ We define multiple baselines:
 \begin{enumerate}[label=(\alph*)]
 \item 
 \noindent\begin{minipage}{0.6\textwidth}
-Random Action Baseline: Taking random action at any given state out of the available actions. We see that in almost all the cases, we get negative rewards. In order to check if taking a single action may lead to the optimum, we saw that this policy performed even worse than taking random actions.
+Random Action Baseline: Taking random action at any given state out of the available actions. We see that in almost all the cases, we get negative rewards. We also checked if taking a single action leads to the optimum. However this performed worse than taking random actions.
 \end{minipage}
 \begin{minipage}{0.3\textwidth}\raggedleft
 \includegraphics[scale=0.3]{images/random-action-reward-plot.png}
@@ -54,7 +54,7 @@ We can evaluate the performance of agent by comparing the score with the scores 
 
 \section{Challenges And Approach}
 
-Firstly, this problem has a very large state space, we can not expect a simple epsilon-greedy algorithm to explore everything in a reasonable amount of time. The next logical step is to apply Q-learning. This may help us take the best direction but may not provide a detailed planning. In general, it may not understand the game dynamics from a general point of view. By using function approximation, we can generalize well to unseen states. Reflex-based DNN(DQN) will be used by us to approach this problem, particularly different variants of DQN such as DQN with prioritize replay\citep{PrioritizedReplay}, Double DQN\citep{DoubleQ-learning}, and Dueling network architecture \citep{Dueling} to solve this problem.
+Firstly, this problem has a very large state space, we can not expect a simple epsilon-greedy algorithm to explore everything in a reasonable amount of time. The next logical step is to apply Q-learning. This may help us take the best direction but may not provide a detailed planning. In general, it may not understand the game dynamics from a general point of view. By using function approximation, we can generalize well to unseen states. We are planning to explore variants of DQN, particularly DQN with prioritize replay\citep{PrioritizedReplay}, Double DQN\citep{DoubleQ-learning}, and Dueling network architecture \citep{Dueling} to solve this problem.
 
 \bibliography{biblio}
 \bibliographystyle{abbrv}
