--- a/documentation/progress/model.tex
+++ b/documentation/progress/model.tex
@@ -53,14 +53,25 @@ Input to the DQN network is compressed video frames of 84 x 84 pixels followed b
 
 
 
+
 \subsection{Experiments and Evaluation}
 
 \begin{figure}%
 \centering
-\includegraphics[width=0.6\columnwidth]{figures/tensorboard.png}%
+\includegraphics[width=0.8\columnwidth]{figures/tensorboard.png}%
 \caption{Initial Experimental Results}%
 \label{fig:datastats}%
 \end{figure}
 
+
+
+
+
+\begin{figure}%
+\centering
+\includegraphics[width=0.6\columnwidth]{figures/evaluate_100.png}%
+\caption{Rewards per Episode}%
+\label{fig:datastats}%
+\end{figure}
 
 
