--- a/documentation/progress/model.tex
+++ b/documentation/progress/model.tex
@@ -1,6 +1,44 @@
-\section{Model}
+\section{Model Description}
 \label{sec:Model}
 
+Our model is Deep Reinforcement Learning, and the algorithms are variants of Deep Q-Network (DQN).
+
+\subsection{Framework}
+Basic framework is defined in Fig 1. The agent performs action($a$) on the environment. Performing the action on the environment returns reward($r$) and new state $s'$. Our agent then incorporates this information.
+
+\begin{figure}%
+\centering
+\includegraphics[scale=0.3]{reinforcement_framework.png}%
+\caption{Reinforcement Learning framework}%
+\label{fig:datastats}%
+\end{figure}
+
+In such a model, for our problem, here is quick description of notations:
+\begin{enumerate}
+\item $S$ is defined as all possible states, $s$ is one particular 8 dimensional state
+\item $A$ is defined as all possible actions, $a$ is one of the actions out of $[\text{idle}, \text{fire engine}, \text{rotate left}, \text{rotate right}]$
+\item $R$ is the reward distribution given $(s, a)$
+\item $P$ is the set of possible transitions and their probabilities given $(s, a)$
+\item $\gamma$: the discount factor. How much we want our agent to discount future reward. It is a hyperparameter that we define ourselves.
+\end{enumerate}
+
+\subsection{Goal}
+
+Given the state $s$, our goal is to identify a policy $\pi_{opt}$ that maps the states to actions in order to maximize the total reward we get.
+
+\begin{center}
+S $\rightarrow$ A based on $\pi_{opt}$
+\end{center}
+
+As we know, $Q$ value is defined as the expected reward that we get following action $a$ in a given state $s$ and then following the policy $\pi$, our objective is to define a $Q_{opt} (s, a)$, which can be maximised over all possible actions at a state $s$, in order to find the $\pi_{opt}$.
+
+\begin{align*}
+Q_{opt} (s,a) \approx Q(s, a, \theta)
+\end{align*}
+
+where $\theta$ is a set of weights obtained through a deep neural network (using variants of DQN).
+
+\section{Algorithm Description}
 
 \subsection{Q-Learning}
 Q-learning learns action-reward function Q(s,a): determines how good to take an action in a particular state. In Q-learning we build memory table Q[s,a] to store Q-values for all possible combinations of s and a. We sample an action from the current state to find out reward  and new state. From the memory table, we determine the next action to take which has maximum Q(s,a).
