--- a/documentation/progress/model.tex
+++ b/documentation/progress/model.tex
@@ -64,23 +64,10 @@ We will train the neural network on subset of transitions into a buffer. From th
 \end{figure}
 
 
-\subsection{Loss function}
-
-
-DQN Uses huber loss where loss is quadratic for small values of a and linear for larger values.
-
-
-\begin{figure}%
-\centering
-\includegraphics[width=0.6\columnwidth]{figures/loss-function.png}%
-\caption{DQN loss function}%
-\label{fig:datastats}%
-\end{figure}
-
 
 \subsection{Architecture}
 
-Input to the DQN network is compressed video frames of 84 x 84 pixels followed by fully connected layers to compute Q value for each action.
+Input to the DQN network is a 8 dimensional vector from observations based on epsilon followed by two dense layers and then by fully connected layers to compute Q value for each action.
 
 \begin{figure}%
 \centering
