Modifications done to .tex files

--- a/documentation/progress/introduction.tex
+++ b/documentation/progress/introduction.tex
@@ -1,19 +1,18 @@
 \section{Introduction to choice of model and algorithm}
 \label{intro}
-Since no data is provided as in supervised or unsupervised learning, there is only an environment which the agent can investigate to collect data. At any time frame, the lunar lander can be imagined at a state defined by eight features with four discrete actions available. Hence, due to above reasons and uncertainty after taking a discrete action, this problem can be modelled as a Markov Decision Process(MDP) with unknown rewards and transition probabilities, which can be targeted using Reinforcement Learning algorithms. \\
+A reinforcement learning environment for lunar-lander game is provided by open AI gym. This environment provides an interface to test and probe. At any time frame, the lunar lander can be imagined at a state defined by eight features with four discrete actions available. Due to uncertainty after taking a discrete action, this problem is modeled as a Markov Decision Process (MDP) where in, moving from one state to another gives us a reward. We want to choose an optimal policy at each state with maximizes the cumulative, long-term reward.
 
-Since this problem involves high dimension and continuous state space, standard Q-learning cannot solve this problem unless some amount of discretisation is done. Due to above mentioned difficulties, Deep Q-Network (DQN) was the choice and we wanted to explore different variants of DQN (particularly DQN with prioritize replay, Double DQN, and Dueling network architecture).
+Since this problem involves high dimension and continuous state space, standard Q-learning cannot solve this problem unless some amount of discretization is done. Due to above mentioned difficulties, Deep Q-Network (DQN) was the choice. We  plan to explore different variants of DQN (particularly DQN with prioritize replay, Double DQN, and Dueling network architecture).
 
 
 \section{Environment and States Description}
 
-\subsection{Terrain}
-
-The terrain is a combination of 10 points, and the helipad(landing zone) is fixed between 5th and 6th points towards the center. The values of the height of the landing zone(5th and 6th points on the terrain) are viewport height divided by 4, and the rest of the points are randomly sampled between 0 to H/2 using numpy random and smoothened (averaging 3 continuous points).
+\subsection{Terrain} 
+The terrain is a combination of 10 points, and the helipad(landing zone) is fixed between 5th and 6th points towards the center. The values of the height of the landing zone(5th and 6th points on the terrain) are viewport height divided by 4, and the rest of the points are randomly sampled between 0 to H/2 using \textit{numpy} random and smoothened (averaging 3 continuous points).
 
 \subsection{Initial State}
 
-The state is 8 dimensional values of different parameters of the lunar lander at any given time. The starting state is randomly initialised (the lunar lander takes a step in the world through the "idle" action) with certain bounds based on the environment.
+The state is 8 dimensional values of different parameters of the lunar lander at any given time. The starting state is randomly initialized (the lunar lander takes a step in the world through the "idle" action) with certain bounds based on the environment.
 
 Inspecting code of open\_ai lunar lander, we see that the initial states are defined by simulating the environment in one frame (calling box world simulation using time step as $1/FPS$). Using this simulation, elaborating the initial state as follows:
 
@@ -55,11 +54,11 @@ The rewards are defined as follows:
 \begin{enumerate}
 \item If the lunar lander crashes, or goes out of the bounds: $-100$
 \item If the lunar lander is not awake anymore (stabilises at 0 shape change): $+100$
-\item Doing nothing: shape change
+\item Doing nothing: shape change 
 \item Firing the engine: shape change - 0.3
 \item Rotating: shape change - 0.03
 \end{enumerate}
 
 The total reward will automatically be a sum of all the rewards at each time frame, and if the lander touches the ground with it's legs, will add those rewards to the total rewards earned during an episode. Transition probabilities are unknown, we get next states by simulating the lunar lander in the box environment given the current state and action taken. \\
 
-\textbf{Note}: The transition probabilities and rewards are unknown to our agent, which it will try to figure out through exploration and incorporate in learning.
+\textbf{Note}: The transition probabilities and rewards are unknown to our agent, which it will try to figure out through exploration and incorporate in learning. 
