--- a/documentation/progress/model.tex
+++ b/documentation/progress/model.tex
@@ -1,7 +1,7 @@
 \section{Model Description}
 \label{sec:Model}
 
-Our model is Deep Reinforcement Learning, and the algorithms are variants of Deep Q-Network (DQN).
+Our model is Deep Reinforcement Learning, and the algorithms are variants of Deep Q-Network (DQN). DQN is a model-free learning agent.
 
 \subsection{Framework}
 Basic framework is defined in Fig 1. The agent performs action($a$) on the environment. Performing the action on the environment returns reward($r$) and new state $s'$. Our agent then incorporates this information.
@@ -24,6 +24,7 @@ In such a model, for our problem, here is quick description of notations:
 
 \subsection{Goal}
 
+Our model builds off of Q-learning algorithms by using a Deep Neural Network (DNN) for approximating the state-action Q-value, Q(s, a). 
 Given the state $s$, our goal is to identify a policy $\pi_{opt}$ that maps the states to actions in order to maximize the total reward we get.
 
 \begin{center}
@@ -32,16 +33,10 @@ S $\rightarrow$ A based on $\pi_{opt}$
 
 As we know, $Q$ value is defined as the expected reward that we get following action $a$ in a given state $s$ and then following the policy $\pi$, our objective is to define a $Q_{opt} (s, a)$, which can be maximised over all possible actions at a state $s$, in order to find the $\pi_{opt}$.
 
-\begin{align*}
-Q_{opt} (s,a) \approx Q(s, a, \theta)
-\end{align*}
-
-where $\theta$ is a set of weights obtained through a deep neural network (using variants of DQN).
-
 \section{Algorithm Description}
 
 \subsection{Q-Learning}
-Q-learning learns action-reward function Q(s,a): determines how good to take an action in a particular state. In Q-learning we build memory table Q[s,a] to store Q-values for all possible combinations of s and a. We sample an action from the current state to find out reward  and new state. From the memory table, we determine the next action to take which has maximum Q(s,a).
+Q-learning learns action-reward function Q(s,a): determines best action to take in a particular state. In Q-learning we build memory table Q[s,a] to store Q-values for all combinations a, as and when we encounter state $s$. We sample an action from the current state to find out reward  and new state. From the memory table, we determine the next action to take which has maximum Q(s,a).
 
 \begin{figure}%
 \centering
@@ -52,13 +47,13 @@ Q-learning learns action-reward function Q(s,a): determines how good to take an 
 
 
 \subsection{DQN}
-The number of actions we can take from current state is large and we need to observe each action space to solve this problem. We will be using Deep Q Network (DQN) to find Q(s,a). However while exploring each state space the Q value(label) will be changing each time and we will be updating model parameters to update based on new Q value each time. The newly Q value will be higher at the same time the target Q value will be move higher making it difficult for algorithm to optimize. To solve this challenges we can slow down the changing Q value using Experience replay and Target network.
-
-We will train the neural network on subset of transitions into a buffer. From this buffer we will sample mini batch which will be stable for training. We will be buiding two neural network one to retrieve Q values while second one is to update the Q value. After a fixed intervals we will synchronize the parameters. 
+The number of actions we can take from current state is large and we need to observe each action space to solve this problem. We will be using Deep Q Network (DQN) to find Q(s,a). We will be updating model parameters for a mini-batch. To solve this challenge we can slow down the changing Q-value using Experience replay and Target network.
+\newline
+We will train the neural network on subset of transitions into a buffer. From this buffer we will sample mini batch which will be stable for training. 
 
 \begin{figure}%
 \centering
-\includegraphics[width=0.6\columnwidth]{figures/DQN-ExperinceReplay.png}%
+\includegraphics[width=1.0\columnwidth]{figures/DQN-ExperinceReplay.png}%
 \caption{DQN with Experience Replay}%
 \label{fig:datastats}%
 \end{figure}
@@ -67,19 +62,17 @@ We will train the neural network on subset of transitions into a buffer. From th
 
 \subsection{Architecture}
 
-Input to the DQN network is a 8 dimensional vector from observations based on epsilon followed by two dense layers and then by fully connected layers to compute Q value for each action.
-
+Input to the neural network used in DQN is a 8 dimensional vector followed by two dense layers and then by fully connected layers to compute Q value for each of the 4 actions.
 \begin{figure}%
 \centering
-\includegraphics[width=0.6\columnwidth]{figures/DQN-architecture.png}%
-\caption{DQN Architecture}%
+\includegraphics[width=1.0\columnwidth]{figures/DNN_image.png}%
+\caption{Neural Network The Deep Q neural network topology, consisting of 8 input nodes, 128-node hidden layer, a 64-node hidden layer, and 4 output nodes.}%
 \label{fig:datastats}%
 \end{figure}
 
-
-
-
 \subsection{Experiments and Evaluation}
+
+Based on our initial experiments, we got an average reward of close to 200 consistently after about 2000 episodes. In future, we will try to do more feature engineering and try out variants of DQN network to reduce the learning time.
 
 \begin{figure}%
 \centering
@@ -87,10 +80,6 @@ Input to the DQN network is a 8 dimensional vector from observations based on ep
 \caption{Initial Experimental Results}%
 \label{fig:datastats}%
 \end{figure}
-
-
-
-
 
 \begin{figure}%
 \centering
