chore: add placeholders

--- a/documentation/final/final.tex
+++ b/documentation/final/final.tex
@@ -88,11 +88,22 @@ The total reward will automatically be a sum of all the rewards at each time fra
 \textbf{Note}: The transition probabilities and rewards are unknown to our agent, which it will try to figure out through exploration and incorporate in learning. 
 
 
-\section*{Problem 2}
+\section{Approach}
 
-\begin{enumerate}[label=(\alph*)]
-  \item (your solution)
-  \item (your solution)
-\end{enumerate}
+// describe baseline
+
+// describe oracle
+
+// describe basic framework for rl learning
+
+// describe all three learning algorithms
+
+
+\section{Results}
+
+// show all the results here, explain something about them
+
+\section{Error Analysis}
+
 
 \end{document}
