feat: convert the task definition to scope and evaluation

--- a/documentation/final/final.tex
+++ b/documentation/final/final.tex
@@ -13,7 +13,13 @@ Prabhjot Singh Rai [prabhjot], Abhishek Bharani [abharani], Amey Naik [ameynaik]
 
 \section{Task Definition}
 
-The task accomplished by this project is to build an AI agent which would land with constant high rewards on a landing pad, defined by Box2D Lunar Lander available on OpenAI gym. This is accomplished by Reinforcement Learning, particularly by applying different Q-learning techniques. This project has explored Full DQN, Double DQN and Dueling Network Architecture (Dueling DQN), their performances in "solving" the game. We have considered a game to be solved when the agent starts getting average reward of 200 over 100 consecutive episodes. Moreover, performances have also been compared with baselines and oracle.
+\subsection{Scope}
+
+The task accomplished by this project is to build an AI agent which would land with constant high rewards on a landing pad, defined by Box2D Lunar Lander available on OpenAI gym. This is accomplished by Reinforcement Learning, particularly by applying different Q-learning techniques. This project has explored Full DQN, Double DQN and Dueling Network Architecture (Dueling DQN), their performances in "solving" the game. 
+
+\subsection{Evaluation}
+
+We have considered a game to be solved when the agent starts getting average reward of 200 over 100 consecutive episodes. Performances have been compared with baselines and oracle. Moreover, we have also tried to get comparable results with the leader-board on OpenAI gym.
 
 \section{Infrastructure}
 
