--- a/documentation/final/final.tex
+++ b/documentation/final/final.tex
@@ -96,7 +96,48 @@ The total reward will automatically be a sum of all the rewards at each time fra
 
 \section{Approach}
 
-// describe baseline
+\subsection{Challenges}
+
+We dedicated time to understand how the openai-gym is working internally. For this specific problem, we understood how the rewards and environment is behaving on every episode, as described in infrastructure. Moreover, to get faster results, we focused on better machine and GPU settings on google cloud and getting docker environment setup for codalab and reproducibility across platforms.
+
+\subsection{Modelling the problem}
+
+Basic framework is defined in Fig 1. The agent performs action($a$) on the environment. Performing the action on the environment returns reward($r$) and new state $s'$. Our agent then incorporates this information.
+
+\begin{figure}%
+\centering
+\includegraphics[scale=0.3]{reinforcement_framework.png}%
+\caption{Reinforcement Learning framework}%
+\label{fig:datastats}%
+\end{figure}
+
+In such a model, for our problem, here is quick description of notations:
+\begin{enumerate}
+\item $S$ is defined as all possible states, $s$ is one particular 8 dimensional state
+\item $A$ is defined as all possible actions, $a$ is one of the actions out of $[\text{idle}, \text{fire engine}, \text{rotate left}, \text{rotate right}]$
+\item $R$ is the reward distribution given $(s, a)$
+\item $P$ is the set of possible transitions and their probabilities given $(s, a)$
+\item $\gamma$: the discount factor. How much we want our agent to discount future reward. It is a hyperparameter that we define ourselves.
+\end{enumerate}
+
+Our model builds off of Q-learning algorithms by using a Deep Neural Network (DNN) for approximating the state-action Q-value, Q(s, a). 
+Given the state $s$, our goal is to identify a policy $\pi_{opt}$ that maps the states to actions in order to maximize the total reward we get.
+
+\begin{center}
+S $\rightarrow$ A based on $\pi_{opt}$
+\end{center}
+
+As we know, $Q$ value is defined as the expected reward that we get following action $a$ in a given state $s$ and then following the policy $\pi$, our objective is to define a $Q_{opt} (s, a)$, which can be maximised over all possible actions at a state $s$, in order to find the $\pi_{opt}$.
+
+\subsection{Approaches and Equations}
+
+// Describe all equations (Amey)
+
+\subsection{Accuracy and Efficiency}
+
+
+
+
 
 // describe oracle
 
